fix not showing all contents, improve ui

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,5 @@
 .container {
-    position: absolute;
-    left: 0;
-    right: 0;
+    display: contents;
 }
 
 .container-actions {
